[package]
name = "rfs"
version = "0.3.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[workspace]
members = [".", "rfs-client", "rfs-server"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
nix = "0.17"
libc = "0.2"
path-clean = "0.1"
futures-util = "0.3"
futures-channel = "0.3"
tonic = { version = "0.2", features = ["transport", "tls", "tls-roots"] }
prost = "0.6"
prost-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"
async-notify = "0.2"
async-signals = "0.3"
snap = "1"
atomic_value = "0.1"
smol = { version = "0.1", features = ["tokio02"] }
fuse3 = { version = "0.1.0-beta1.2", features = ["file-lock", "async-std-runtime", "unprivileged"] }
semver-parser = "0.9"
async-trait = "0.1"
async-std = "1.5"
num_cpus = "1.13"

#[dependencies.fuse3]
#branch = "master"
#git = "https://github.com/Sherlock-Holo/fuse3"
#features = ["file-lock", "async-std-runtime", "unprivileged"]

[dev-dependencies]
tempfile = "3.1"
async-std = { version = "1.5", features = ["attributes"] }

[build-dependencies]
tonic-build = "0.2"
