[package]
name = "rfs"
version = "0.4.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[workspace]
members = [".", "rfs-client", "rfs-server"]

[dependencies]
nix = "0.20"
libc = "0.2"
path-clean = "0.1"
futures-util = "0.3"
futures-channel = "0.3"
tonic = { version = "0.4", features = ["transport", "tls", "tls-roots"] }
prost = "0.7"
prost-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"
async-notify = "0.2"
async-signals = "0.3"
snap = "1.0"
atomic_value = "0.1"
fuse3 = { version = "0.2.0-beta.4", features = ["file-lock", "tokio-runtime", "unprivileged"] }
semver-parser = "0.10"
async-trait = "= 0.1"
tokio = { version = "1.3", features = ["fs", "net", "rt", "sync", "time", "macros"] }
bytes = "1.0"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["fs"] }
pin-project = "1.0"
tower = "0.4"
http = "0.2"
http-body = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.11"
opentelemetry = "0.12"
opentelemetry-jaeger = "0.11"

#[dependencies.fuse3]
#branch = "master"
#git = "https://github.com/Sherlock-Holo/fuse3"
#features = ["file-lock", "async-std-runtime", "unprivileged"]

[dev-dependencies]
tempfile = "3.2"

[build-dependencies]
tonic-build = "0.4"
