[package]
name = "rfs"
version = "0.4.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[workspace]
members = [".", "rfs-client", "rfs-server"]

[dependencies]
nix = "0.23"
libc = "0.2"
path-clean = "0.1"
futures-util = { version = "0.3", features = ["channel"] }
tonic = { version = "0.6", features = ["transport", "tls", "tls-roots"] }
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"
async-notify = "0.2"
async-signals = "0.4"
snap = "1.0"
fuse3 = { version = "0.3", features = ["file-lock", "tokio-runtime", "unprivileged"] }
semver-parser = "0.10"
async-trait = "= 0.1"
tokio = { version = "1.3", features = ["fs", "net", "rt", "sync", "time", "macros"] }
bytes = "1.0"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["fs"] }
pin-project = "1.0"
tower-service = "0.3"
http = "0.2"
http-body = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-opentelemetry = "0.17"
opentelemetry = "0.17"
opentelemetry-jaeger = "0.16"

#[dependencies.fuse3]
#branch = "master"
#git = "https://github.com/Sherlock-Holo/fuse3"
#features = ["file-lock", "async-std-runtime", "unprivileged"]

[dev-dependencies]
tempfile = "3.2"

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"
