[package]
name = "rfs-client"
version = "0.3.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs = { path = ".." }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", features = ["color"] }
anyhow = "1.0"
log = "0.4"
tonic = { version = "0.2", features = ["tls"] }
futures-util = "0.3"
nix = "0.17"
smol = { version = "0.1", features = ["tokio02"] }
async-std = "1.6"
