[package]
name = "rfs-client"
version = "0.3.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs = { path = ".." }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", features = ["color"] }
anyhow = "1.0"
tonic = { version = "0.6", features = ["tls"] }
futures-util = "0.3"
nix = "0.23"
tokio = { version = "1.3", features = ["fs", "rt-multi-thread", "macros"] }
tracing = "0.1"
