[package]
name = "rfs-server"
version = "0.3.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs = { path = ".." }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", features = ["color"] }
futures-util = "0.3"
log = "0.4"
nix = "0.19"
anyhow = "1.0"
async-signals = "0.3"
tokio = { version = "1.2", features = ["fs", "rt-multi-thread", "macros"] }
