[package]
name = "rfs-server"
version = "0.5.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs = { path = ".." }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
structopt = { version = "0.3", features = ["color"] }
futures-util = "0.3"
nix = "0.25"
anyhow = "1"
async-signals = "0.4"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
tracing = "0.1"
